# qrobotics

./: .pre-commit-config.yaml  pyproject.toml
examples/webots/robot_controller/controllers/ur3e_controller/: ur3e_controller.py
examples/webots/robot_controller/protos/: Robotiq2f85Gripper.proto
examples/webots/robot_controller/worlds/: .robot_controller_example.wbproj  robot_controller_example.wbt
src/qrobotics/core/robot_controller/: __init__.py  commands.py  robot_controller.py  robot_joint_controller.py  robot_motion_controller.py  robot_motion_planner.py  trajectory.py
src/qrobotics/webots/: __init__.py  webots_robot_joint_controller.py  webots_ur3e_robot_controller.py
